--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ url: "http://jimdab.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+
+theme: jekyll-theme-cayman
