--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,5 @@ description: "Welcome to my own little corner of the web where I will continue t
 baseurl: ''
 url: http://jimdab.com
 markdown: kramdown
+
+theme: jekyll-theme-minimal
